--- a/src/app/pages/center/activities/activities.component.html
+++ b/src/app/pages/center/activities/activities.component.html
@@ -1,9 +1,9 @@
 <nz-table #activitiesTable [nzData]="activities">
   <thead>
     <tr>
-      <th>登录地址</th>
-      <th>登录设备</th>
-      <th>操作时间</th>
+      <th nzWidth="150px" nzLeft>登录地址</th>
+      <th nzWidth="250px">登录设备</th>
+      <th nzWidth="150px" nzRight>操作时间</th>
     </tr>
   </thead>
   <tbody>
