--- a/src/app/pages/center/center.component.html
+++ b/src/app/pages/center/center.component.html
@@ -2,7 +2,7 @@
   <div nz-col nzFlex="420px">
     <nz-card>
       <div class="user">
-        <nz-avatar [nzSize]="128" nzSrc="/assets/user.png" nzIcon="user"></nz-avatar>
+        <nz-avatar [nzSize]="128" nzSrc="/assets/user.png" nzIcon="user" nz-tooltip="更换头像"></nz-avatar>
         <h2><i nz-icon nzType="idcard"></i> KAIN</h2>
         <span>超级管理员</span>
       </div>
