--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -14,37 +14,19 @@
 
 .main-layout {
   height: 100%;
-  nz-sider {
-    overflow: auto;
-    height: 100%;
-    position: fixed;
-    left: 0;
-  }
 }
 
-$header: 56px;
-
-.right-layout {
-  overflow: auto;
-  transition: margin-left 0.2s;
-  margin-left: 200px;
-  margin-top: $header;
-
-  &.collapsed {
-    margin-left: 80px;
-  }
-}
+$header: 64px;
 
 nz-header {
   position: fixed;
   top: 0;
-  right: 0;
 
+  width: 100%;
   height: $header;
   line-height: $header;
-  width: calc(100% - 200px);
 
-  padding: 0 8px;
+  padding: 0 24px;
   z-index: 999;
   box-shadow: 0 1px 4px rgb(0 21 41 / 8%);
   background: #fff;
@@ -53,9 +35,26 @@ nz-header {
   button {
     height: 100%;
   }
+}
 
-  &.collapsed {
-    width: calc(100% - 80px);
+.logo {
+  padding: 0 24px;
+  cursor: pointer;
+
+  h1 {
+    display: inline-block;
+    height: 32px;
+    line-height: 32px;
+    margin: 0 0 0 12px;
+    font-weight: 600;
+    font-size: 18px;
+    vertical-align: middle;
+  }
+
+  img {
+    display: inline-block;
+    height: 32px;
+    vertical-align: middle;
   }
 }
 
@@ -73,6 +72,21 @@ nz-header {
   }
 }
 
+.section-layout {
+  margin-top: $header;
+}
+
+nz-sider {
+  overflow: auto;
+  height: 100%;
+  border-right: 1px solid #f0f0f0;
+}
+
+//.sider-scroll-bar {
+//  height: calc(100% - 112px);
+//  overflow: auto;
+//}
+
 .content {
-  padding: 15px 12px;
+  padding: 16px;
 }
