--- a/src/app/pages/dashboard/analysis/analysis.component.html
+++ b/src/app/pages/dashboard/analysis/analysis.component.html
@@ -4,26 +4,21 @@
       <div nz-row [nzGutter]="[16, 16]">
         <div nz-col nzFlex="1">
           <nz-space nzSize="large" nzDirection="vertical">
-            <nz-statistic
-              *nzSpaceItem
-              nzPrefix="￥"
-              [nzValue]="(126560 | number)!"
-              [nzTitle]="'总销售额'"
-            ></nz-statistic>
-            <nz-statistic
-              *nzSpaceItem
-              nzPrefix="￥"
-              [nzValue]="(12423 | number)!"
-              [nzTitle]="'日销售额'"
-            ></nz-statistic>
-            <div style="padding: 12px" *nzSpaceItem>
-              <h3>周同比 12% <i nz-icon nzType="caret-up" style="color: #cf1322"></i></h3>
-              <h3>日同比 11% <i nz-icon nzType="caret-down" style="color: #3f8600"></i></h3>
+            <nz-statistic *nzSpaceItem nzPrefix="￥" [nzValue]="(126560 | number)!" [nzTitle]="totalSales">
+              <ng-template #totalSales>总销售额 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
+            </nz-statistic>
+            <nz-statistic *nzSpaceItem nzPrefix="￥" [nzValue]="(12423 | number)!" [nzTitle]="dailySales">
+              <ng-template #dailySales>日销售额 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
+            </nz-statistic>
+            <div style="padding: 12px 24px" *nzSpaceItem>
+              <h4>周同比 12% <i nz-icon nzType="caret-up" style="color: #cf1322"></i></h4>
+              <h4>日同比 11% <i nz-icon nzType="caret-down" style="color: #3f8600"></i></h4>
             </div>
           </nz-space>
         </div>
         <div nz-col nzFlex="1">
-          <nz-statistic [nzValueTemplate]="effectStatistic" [nzTitle]="'运营活动效果'">
+          <nz-statistic [nzValueTemplate]="effectStatistic" [nzTitle]="effect">
+            <ng-template #effect>运营活动效果 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
             <ng-template #effectStatistic>
               <div #effectChart></div>
             </ng-template>
@@ -36,16 +31,24 @@
     <nz-card style="height: 345px">
       <div nz-row [nzGutter]="[16, 16]">
         <div nz-col [nzSpan]="4">
-          <nz-statistic [nzValue]="(31568 | number)!" [nzTitle]="'访问量'"></nz-statistic>
+          <nz-statistic [nzValue]="(31568 | number)!" [nzTitle]="pv">
+            <ng-template #pv>访问量 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
+          </nz-statistic>
         </div>
         <div nz-col [nzSpan]="4">
-          <nz-statistic [nzValue]="(2198 | number)!" [nzTitle]="'用户数'"></nz-statistic>
+          <nz-statistic [nzValue]="(2198 | number)!" [nzTitle]="uv">
+            <ng-template #uv>用户数 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
+          </nz-statistic>
         </div>
         <div nz-col [nzSpan]="4">
-          <nz-statistic [nzValue]="(573 | number)!" [nzTitle]="'成交量'"></nz-statistic>
+          <nz-statistic [nzValue]="(573 | number)!" [nzTitle]="trading">
+            <ng-template #trading>成交量 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
+          </nz-statistic>
         </div>
         <div nz-col [nzSpan]="4">
-          <nz-statistic [nzValue]="12" nzSuffix="%" [nzTitle]="'转化率'"></nz-statistic>
+          <nz-statistic [nzValue]="12" nzSuffix="%" [nzTitle]="conversion">
+            <ng-template #conversion>转化率 <i nz-icon nzType="info-circle" nz-tooltip="指标说明"></i></ng-template>
+          </nz-statistic>
         </div>
         <div nz-col [nzSpan]="24">
           <div #conversionChart></div>
@@ -58,19 +61,95 @@
     <nz-card>
       <nz-card-tab>
         <nz-tabset [nzTabBarExtraContent]="searchForDate" nzSize="large">
-          <nz-tab nzTitle="销售额"></nz-tab>
-          <nz-tab nzTitle="访问量"></nz-tab>
+          <nz-tab nzTitle="地域统计"></nz-tab>
+          <nz-tab nzTitle="商品统计"></nz-tab>
         </nz-tabset>
         <ng-template #searchForDate>
           <nz-range-picker nzBorderless></nz-range-picker>
         </ng-template>
       </nz-card-tab>
       <div nz-row [nzGutter]="[16, 16]">
-        <div nz-col nzFlex="800px">
-          <div #salesTrend></div>
+        <div nz-col [nzSpan]="14">
+          <div #salesTrendChart></div>
         </div>
-        <div nz-col nzFlex="auto"> asd </div>
+        <div nz-col [nzSpan]="10">
+          <div #characterChart></div>
+        </div>
       </div>
+    </nz-card>
+  </div>
+  <nz-dropdown-menu #moreMenu="nzDropdownMenu">
+    <ul nz-menu nzSelectable>
+      <li nz-menu-item>操作一</li>
+      <li nz-menu-item>操作二</li>
+    </ul>
+  </nz-dropdown-menu>
+  <div nz-col [nzSpan]="12">
+    <nz-card style="height: 920px" nzTitle="线上热门搜索" [nzExtra]="hotMore">
+      <ng-template #hotMore>
+        <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="moreMenu">
+          <i nz-icon nzType="ellipsis"></i>
+        </button>
+      </ng-template>
+      <div #keywordChart></div>
+      <nz-table style="margin-top: 24px" #hotTable [nzData]="hots">
+        <thead>
+          <tr>
+            <th>排名</th>
+            <th>搜索关键词</th>
+            <th nzSortOrder>用户数</th>
+            <th nzSortOrder>周涨幅</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of hotTable.data; index as i">
+            <td>{{ i + 1 }}</td>
+            <td>{{ data.keyword }}</td>
+            <td>{{ data.users }}</td>
+            <td>
+              {{ data.increase | percent }}
+              <ng-container *ngIf="data.increase > 0; else not">
+                <i nz-icon nzType="caret-up" style="color: #cf1322"></i>
+              </ng-container>
+              <ng-template #not>
+                <i nz-icon nzType="caret-down" style="color: #3f8600"></i>
+              </ng-template>
+            </td>
+          </tr>
+        </tbody>
+      </nz-table>
+    </nz-card>
+  </div>
+
+  <div nz-col [nzSpan]="12">
+    <nz-card style="height: 920px" nzTitle="销售额类别占比" [nzExtra]="perMore">
+      <ng-template #perMore>
+        <nz-space>
+          <nz-radio-group *nzSpaceItem [(ngModel)]="salesChannel">
+            <label nz-radio-button [nzValue]="0">全部渠道</label>
+            <label nz-radio-button [nzValue]="1">线上</label>
+            <label nz-radio-button [nzValue]="2">门店</label>
+          </nz-radio-group>
+          <button *nzSpaceItem nz-button nzType="text" nz-dropdown [nzDropdownMenu]="moreMenu">
+            <i nz-icon nzType="ellipsis"></i>
+          </button>
+        </nz-space>
+      </ng-template>
+      <div #salesPerChart></div>
+      <div #salesTypeChart></div>
+    </nz-card>
+  </div>
+
+  <div nz-col [nzSpan]="24">
+    <nz-card>
+      <nz-tabset [(nzSelectedIndex)]="statisticsIndex" (nzSelectedIndexChange)="reRender()">
+        <nz-tab nzTitle="目标转化"></nz-tab>
+        <nz-tab nzTitle="时段统计"></nz-tab>
+      </nz-tabset>
+      <div #targetChart> </div>
+<!--      <ng-container [ngSwitch]="statisticsIndex">-->
+<!--        <ng-container *ngSwitchCase="0"> </ng-container>-->
+<!--      </ng-container>-->
     </nz-card>
   </div>
 </div>
