--- a/src/app/pages/dashboard/workbench/workbench.component.html
+++ b/src/app/pages/dashboard/workbench/workbench.component.html
@@ -1,12 +1,12 @@
 
-<button *appExtra nz-button nzType="primary" nzShape="circle">
-  <i nz-icon nzType="plus"></i>
-</button>
+<!--<button *appExtra nz-button nzType="primary" nzShape="circle">-->
+<!--  <i nz-icon nzType="plus"></i>-->
+<!--</button>-->
 
-<nz-tabset *appFooter [nzSelectedIndex]="0">
-  <nz-tab nzTitle="进行中"></nz-tab>
-  <nz-tab nzTitle="已归档"></nz-tab>
-</nz-tabset>
+<!--<nz-tabset *appFooter [nzSelectedIndex]="0">-->
+<!--  <nz-tab nzTitle="进行中"></nz-tab>-->
+<!--  <nz-tab nzTitle="已归档"></nz-tab>-->
+<!--</nz-tabset>-->
 
 <nz-row [nzGutter]="[16, 16]">
   <nz-col [nzSpan]="15">
