--- a/src/app/pages/dashboard/workbench/workbench.component.html
+++ b/src/app/pages/dashboard/workbench/workbench.component.html
@@ -1,3 +1,4 @@
+<bit-ph subTitle="asd"></bit-ph>
 
 <!--<button *appExtra nz-button nzType="primary" nzShape="circle">-->
 <!--  <i nz-icon nzType="plus"></i>-->
