--- a/projects/ngx-bit/router/page-header/page-header.component.html
+++ b/projects/ngx-bit/router/page-header/page-header.component.html
@@ -1,6 +1,6 @@
 <nz-page-header [nzGhost]="false">
   <nz-breadcrumb nz-page-header-breadcrumb>
-    <ng-container *ngFor="let url of urls">
+    <ng-container *ngFor="let url of router.urls">
       <nz-breadcrumb-item>
         <ng-container *ngIf="dict.hasOwnProperty(url) && data.hasOwnProperty(dict[url])">
           <ng-container *ngIf="!bit.locale; else isMultiple">
@@ -13,5 +13,12 @@
       </nz-breadcrumb-item>
     </ng-container>
   </nz-breadcrumb>
-  <nz-page-header-title>{{ title | object: bit.locale }}</nz-page-header-title>
+  <nz-page-header-title>
+    <ng-container *ngIf="!bit.locale; else isMultiple">
+      {{ data[dict[router.fragments | Join: '/']].name }}
+    </ng-container>
+    <ng-template #isMultiple>
+      {{ data[dict[router.fragments | Join: '/']].name | object: bit.locale }}
+    </ng-template>
+  </nz-page-header-title>
 </nz-page-header>
