--- a/src/app/pages/dashboard/workbench/workbench.component.html
+++ b/src/app/pages/dashboard/workbench/workbench.component.html
@@ -1,4 +1,8 @@
-<bit-ph subTitle="asd"></bit-ph>
+<bit-ph back>
+  <nz-alert *bitPhAlert nzBanner nzMessage="Warning text"></nz-alert>
+  <button nz-button *bitPhAction>Default Button</button>
+  <button nz-button *bitPhAction>Default Button</button>
+</bit-ph>
 
 <!--<button *appExtra nz-button nzType="primary" nzShape="circle">-->
 <!--  <i nz-icon nzType="plus"></i>-->
