--- a/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
+++ b/projects/ngx-bit/router/bit-page-header/bit-page-header.component.html
@@ -1,6 +1,5 @@
 <ng-container *ngTemplateOutlet="router.alert | async"></ng-container>
-
-<nz-page-header [nzGhost]="false">
+<nz-page-header [nzGhost]="false" [nzBackIcon]="(router.back | async) ? '' : null">
   <nz-breadcrumb nz-page-header-breadcrumb>
     <ng-container *ngFor="let url of router.urls">
       <nz-breadcrumb-item>
