--- a/src/app/pages/result/fail/fail.component.html
+++ b/src/app/pages/result/fail/fail.component.html
@@ -1,3 +1,4 @@
+<bit-ph skip></bit-ph>
 <nz-card>
   <nz-result nzTitle="提交失败" nzStatus="error" nzSubTitle="请核对并修改以下信息后，再重新提交">
     <div nz-result-content>
